fix: changed button text color, custom scrollbar

--- a/src/components/v5/shared/Button/Button.module.css
+++ b/src/components/v5/shared/Button/Button.module.css
@@ -7,7 +7,7 @@
 }
 
 .primaryOutlineFull {
-  @apply bg-base-white text-gray-700 border border-gray-300 hover:bg-blue-400 hover:border-blue-400 hover:text-base-white disabled:text-gray-300;
+  @apply bg-base-white text-gray-700 border border-gray-100 hover:bg-blue-400 hover:border-blue-400 hover:text-base-white disabled:text-gray-300;
 }
 
 .secondarySolid {
